prevent svg button preview from being too large for screen

--- a/docs/css/pageElements/console_buttons.css
+++ b/docs/css/pageElements/console_buttons.css
@@ -51,12 +51,15 @@
     display: inline-flex;
     justify-self: center;
     pointer-events: none;
-    /* max-width: 75%; */
+    max-width: 100vw; 
     z-index: 3;
     background-color: #f5f5f5d0;
     border-radius: 15px;
     border: 1px ridge #BEBEBE;
-    width: auto;
+    width: max-content;
+    height: max-content;
+    padding: 15px;
+    overflow: auto;
 }
 
 .display-button-softkey > .keyboard-svg-graphic,
